<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OfflinePayment</string>
    <string name="scan_hint">Scan Barcode</string>
    <string name="flash_light">Flash Light</string>
    <string name="start_scan">Start Scan</string>
    <string name="scan_result">Scan Result Here</string>
    <string name="input_content">Please Enter the Amount(Rs)</string>
    <string name="ecc">Error Correction Level(Default:L(~7%))</string>
    <string name="overlay_on">Overlay:ON</string>
    <string name="overlay_off">Overlay:OFF</string>
    <string name="overlay_xfermode">Overlay Xfermode</string>
    <string name="footnote">Footnote(Feature Under Develop)</string>
    <string name="input_qrsize">Qr Image Size(Required)</string>
    <string name="input_margin">QrCode Margin(Default:2)</string>
    <string name="title_qr_color">Set Qr Code Color.Default is Black(0,0,0)</string>
    <string name="input_color_r">R(0~255)</string>
    <string name="input_color_g">G(0~255)</string>
    <string name="input_color_b">B(0~255)</string>
    <string name="title_qr_bg_color">Set Qr Code Background Color.Default is White(255,255,255)</string>
    <string name="input_bgColor_r">R(0~255)</string>
    <string name="input_bgColor_g">G(0~255)</string>
    <string name="input_bgColor_b">B(0~255)</string>
    <string name="start_generate">Generate!</string>
    <string name="overlay_size">Over Size(Required If Overlay has Set)</string>
    <string name="overlay_alpha">Overlay Alpha,Default:255(Opaque)</string>
    <string name="action_clear">Clear</string>
    <string name="action_generate">Generate</string>
    <string name="hint_alpha">0~255</string>
    <string name="qr_code_generate_placeholder">Generated QrCode.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="message_subject">Android device log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring and sending log..</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Error while retrieving or sending log, make sure you have a server and password set."</string>
    <string name="main_dialog_text">"This application will attempt to collect the device log.
The collected log will be sent using an application of your choice.
You also will have an opportunity to see and modify the data being sent."
    </string>
    <string name="device_info_fmt">
Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
    </string>
    <string name="dialog_positive">Ok</string>
    <string name="send_capital">Send</string>
    <string name="send_success">Success!</string>
    <string name="import_wif">"Import from private key (WIF)"</string>
    <string name="txt_wif_activity">Wallet Import Format - WIF</string>
    <string name="txt_wif_paste">Private Key (WIF)</string>
    <string name="please_enter_wif">Please enter private key (wif)</string>
    <string name="invalid_wif">Invalid WIF</string>
    <string name="wif_error_invalid_account">Invalid account, please check your WIF for typing errors</string>
    <string name="unable_to_load_wif">Unable to load WIF</string>
    <string name="error_wif">Error creating WIF key</string>
    <string name="error_brainkey_wif_export">WIF imported account doesn\'t support brainkey backup</string>
    <string name="account_create_register_or_import">ACCOUNT CREATE/REGISTER OR IMPORT</string>
    <string name="txt_account_name_org">Account Name</string>
    <string name="txt_account_name">Phone Number</string>
    <string name="time_stamp">Time stamp</string>
    <string name="email_pdf">Email PDF</string>
    <string name="account"> Account</string>
    <string name="friendly_name">Friendly Name</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="payment_received">Payment Received</string>
    <string name="import_brainkey">Import from BrainKey</string>
    <string name="import_backup_old">Import Backup from .bin file</string>
    <string name="choose_backup">Choose Backup</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="account_label">Choose File</string>
    <string name="loading_msg">Please wait until Balances are loading</string>
    <string name="txt_6_digits_pin">PIN (6+ digits)</string>
    <string name="txt_6_digits_pin_confirm">PIN confirm</string>
    <string name="create">CREATE</string>
    <string name="or">OR</string>
    <string name="existing_account">Existing Account</string>
    <string name="v_1_0_beta" translatable="false">v 1.0 beta</string>
    <string name="block_number" translatable="false">block# -------</string>
    <string name="agreement">Agreement</string>
    <string name="pref_agreement">pref_agreement</string>
    <string name="cancel_and_exit">Cancel and Exit</string>
    <string name="i_agree">I Agree</string>
    <string name="kindly_create_account">Kindly create an account name</string>
    <string name="please_enter_old_6_digit_pin">Please enter old PIN</string>
    <string name="please_enter_6_digit_pin">Please enter PIN</string>
    <string name="please_enter_6_digit_pin_confirm">Please enter PIN confirmation</string>
    <string name="missing_existing_password">Please enter the password used to encrypt this backup file</string>
    <string name="pin_number_request">Please enter the pin number used to encode this backup file</string>
    <string name="pin_number_warning">The pin number must be at least 6 digits</string>
    <string name="old_pin_number_warning">The old pin number must be at least 6 digits</string>
    <string name="mismatch_pin">mismatch pin</string>
    <string name="error_invalid_account">Invalid account, please check your brain key for typing errors</string>
    <string name="key_brainkey" translatable="false">menace saa tenible carless koftgar snarly stoned gear abater outbow defile stowage unsappy scrout cowskin wramp</string>
    <string name="txt_pin" translatable="false">pin</string>
    <string name="txt_brain_key">Brainkey</string>
    <string name="txt_brain_key_info">Print this out, or write it down. Anyone with access to your recovery key will have access to funds within this wallet.</string>
    <string name="create_wallet">CREATE WALLET</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="please_enter_brainkey">Please enter brainkey</string>
    <string name="please_enter_correct_brainkey">Please enter correct brainkey</string>
    <string name="balances">Balances</string>
    <string name="contacts">Contacts</string>
    <string name="receive_uppercase">RECEIVE</string>
    <string name="send_uppercase">SEND</string>
    <string name="transactions">Transactions</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="backup_asset">Backup Asset</string>
    <string name="taxable_country">Taxable Country</string>
    <string name="date_time">Display Dates and Times as</string>
    <string name="check_for_updates">Check for updates on startup</string>
    <string name="automatically_install">Automatically install major version</string>
    <string name="require_pin">Require PIN/Pattern to send funds &amp; view memos</string>
    <string name="close_bitshare">Automatically close Softhinkers Wallet after 3 minutes of inactivity</string>
    <string name="always_donate">Always Donate 2 INR to the Support Softhinkers Developers</string>
    <string name="hide_donations">Hide Donations from homescreen Transactions list</string>
    <string name="backup">BACKUP .bin</string>
    <string name="checkbox_donate">Donate 2 INR to the Support Developers at</string>
    <string name="backup_brainkey">BACKUP BRAINKEY</string>
    <string name="backup_no_keys_found_error">No account using this key was found, please make sure you are using an updated backup file.</string>
    <string name="imported_created_accounts">Imported/Created Accounts</string>
    <string name="register_new_account">REGISTER NEW ACCOUNT</string>
    <string name="refresh_keys">REFRESH ACCOUNT KEYS</string>
    <string name="refresh_keys_title">Update account keys</string>
    <string name="refresh_keys_summary">This procedure will update you currently active account keys. You\'ll be required to backup the new keys after the procedure is done and discard your last backup, since it will no longer be valid.\n\nPlease handle this operation with care and don\'t forget to keep your new brain key in a safe and accessible place.</string>
    <string name="dialog_proceed">Proceed</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_later">Later</string>
    <string name="security_update_title">Security update notice</string>
    <string name="security_update_notice">There has been an update to fix a previously undetected security issue. It is unlikely that your account has been affected, but we still strongly urge you to manually update your account keys and replace your old backups.\n\nThe following is a list of accounts we suggest you to update. Please select them and click on the proceed button if you want to do the update now.\n</string>
    <string name="security_update_summary_positive">All the accounts currently managed by this app had their keys updated for your security. You are urged to update all your key backups\n\n</string>
    <string name="security_update_summary_partial">Some accounts currently managed by this app had their keys updated for your security. You are urged to update all your key backups.\n\n</string>
    <string name="security_update_summary_mixed">Some accounts currently managed by this app had their keys updated for your security. You are urged to update all your key backups.\n\nFor the ones that couldn\'t be updated the most probable reason of failure is the lack of funds. Please check that your accounts have a minimal balance and try to update the keys manually in the settings.</string>
    <string name="security_update_summary_negative">There has been a security update, however the app was not able to update the keys for your accounts. The most probable reason for this is the lack of funds. Please check that your accounts have a minimal balance and try to update the keys manually in the settings.</string>
    <string name="updating_account_title">Updating accounts</string>
    <string name="updating_account_message">Please wait while the followng accounts have their keys updated.\n\nIn case of error please check the account balance, you must have a minimal amount of funds in order to perform this operation.</string>
    <string name="toast_update_done">Security update done</string>
    <string name="refresh_keys_fail">It was not possible to update your account key this time, please check your balance.</string>
    <string name="refresh_keys_success">Success! your account key was updated</string>
    <string name="secure_pin">EDIT PIN</string>
    <string name="export">Export</string>
    <string name="show_more">Show more</string>
    <string name="no_amount_requested">No amount requested</string>
</resources>