<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/account_create_register_or_import"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_account_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAccountName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_bg"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvErrorAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_6_digits_pin"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_bg"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvPinConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_6_digits_pin_confirm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPinConfirmation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_bg"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create" />

        <TextView
            android:id="@+id/tvOrAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/or" />

        <Button
            android:id="@+id/tvExistingAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:background="@color/bottomBarColor"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottomBarColor"
                android:visibility="gone"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvBlockNumberHead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:visibility="gone"
                android:background="@color/bottomBarColor"
                android:gravity="center" />

            <ImageView
                android:id="@+id/ivSocketConnected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/icon_setting"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
